toolkit/profile/nsToolkitProfileService.cpp
@@ -686,35 +686,22 @@ void nsToolkitProfileService::CompleteStartup() {
   nsresult rv;
   bool needsFlush = false;
 
-  // If we started into an unmanaged profile in a profile group, set the group
-  // profile to be the managed profile belonging to the group.
   nsCOMPtr<nsIPrefBranch> prefs = do_GetService(NS_PREFSERVICE_CONTRACTID);
-  if (!mCurrent) {
-    nsCString storeID;
-    rv = prefs->GetCharPref(STORE_ID_PREF, storeID);
-    if (NS_SUCCEEDED(rv) && !storeID.IsEmpty()) {
+  nsCString storeID;
+  rv = prefs->GetCharPref(STORE_ID_PREF, storeID);
+
+  if (NS_SUCCEEDED(rv) && !storeID.IsEmpty()) {
+    // We have a storeID from prefs.
+    if (!mCurrent) {
+      // We started into an unmanaged profile. Try to set the group profile to
+      // be the managed profile belonging to the group.
       mGroupProfile = GetProfileByStoreID(storeID);
     }
-  } else {
-    // Otherwise, if the current profile has a storeID, then it must be the
-    // profile for some group.
-    if (!mCurrent->mStoreID.IsVoid()) {
-      mGroupProfile = mCurrent;
-      rv = prefs->SetCharPref(STORE_ID_PREF, mCurrent->mStoreID);
-      NS_ENSURE_SUCCESS_VOID(rv);
-    } else {
-      // Otherwise if the current profile has a store ID set in prefs but not in
-      // the database then restore it. This can happen if a version of Firefox
-      // prior to 67 has overwritten the database.
-      nsCString storeID;
-      rv = prefs->GetCharPref(STORE_ID_PREF, storeID);
-      if (NS_SUCCEEDED(rv) && !storeID.IsEmpty()) {
-        rv = mCurrent->SetStoreID(storeID);
-        if (NS_SUCCEEDED(rv)) {
-          needsFlush = true;
-        }
-      }
-    }
+  } else if (mCurrent && !mCurrent->mStoreID.IsVoid()) {
+    // No store ID in prefs. If the current profile has one we will use it.
+    mGroupProfile = mCurrent;
+    rv = prefs->SetCharPref(STORE_ID_PREF, mCurrent->mStoreID);
+    NS_ENSURE_SUCCESS_VOID(rv);
   }
 
   if (mMaybeLockProfile) {
